Implemented GameState classes and refactored code